--- a/src/kpa500-remote/content/kpa500.html
+++ b/src/kpa500-remote/content/kpa500.html
@@ -31,7 +31,7 @@
     .data_table {
         display: grid;
         grid-template-columns: 60px 60px 360px;
-        margin: 10px 0 0px 0;
+        margin: 10px 0 0 0;
     }
     .dt_label {
         text-align: right;
@@ -51,9 +51,10 @@
         width: 360px;
     }
     .fault_text {
-        background-color: mediumseagreen;
         border: 1px solid black;
+        font-size: 12pt;
         font-weight: bold;
+        padding: 1px 0 0 0;
         text-align: center;
     }
     .header {
@@ -64,7 +65,7 @@
     }
     div.refresh_radio {
         border: 1px solid black;
-        margin: 10px 150px 0px 150px;
+        margin: 10px 150px 0 150px;
         text-align: left;
     }
     .refresh_radio_label {
@@ -96,7 +97,6 @@
     .two_columns {
         display: grid;
         grid-template-columns: 120px 380px;
-        Zmargin: 10px 0 0px 0;
     }
 
 </style>
@@ -105,50 +105,84 @@
     let free_updates = 0;
     let update_secs = 0;
     let update_timeout = 0;
+    let kpa500_data = [];
 
     function page_load() {
         get_status();
     }
 
-    function set_mode(mode) {
-        // send the set mode command
+    function post_request(url, payload) {
         let xmlHttp = new XMLHttpRequest();
         if (xmlHttp == null) {
-            alert("get a better browser!");
+            alert("no xmlhttp -- get a modern browser!");
             return;
         }
-        let payload = "set=" + mode;
-        xmlHttp.open("POST", "/api/mode", true);
-        xmlHttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-        xmlHttp.send(payload);
-        get_status()
-    }
-
-    function toggle_laser() {
-        // send the toggle laser command
-        let xmlHttp = new XMLHttpRequest();
-        if (xmlHttp == null) {
-            alert("get a better browser!");
-            return;
-        }
-        let payload = "toggle=";
-        xmlHttp.open("POST", "/api/laser", true);
+        xmlHttp.open("POST", url, true);
         xmlHttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
         xmlHttp.send(payload);
         free_updates = 3;
         get_status();
     }
 
+    function toggle_power() {
+        let payload = "";
+        if (kpa500_data[4] === "1") {
+            payload = "state=0";
+        } else {
+            payload = "state=1";
+        }
+        post_request("/api/set_power", payload);
+    }
+
+    function toggle_operate() {
+        let state = "0";
+        if (kpa500_data[0] === "1") {
+            state = "0";
+        } else {
+            state = "1";
+        }
+        let payload = "state=" + state;
+        post_request("/api/set_operate", payload);
+    }
+
+    function radio_operate(state) {
+        post_request("/api/set_operate", "state=" + state.toString());
+    }
+
+    function select_band_changed() {
+        let selected_band = document.getElementById("select_band").value;
+        post_request("/api/set_band", "band=" + selected_band);
+    }
+
+    function fan_speed_change() {
+        let fan_speed = document.getElementById("fan_range").value;
+        post_request("/api/set_fan_speed", "speed="+ fan_speed.toString());
+    }
+
+    function speaker_alarm_button_click() {
+        let state = "0";
+        if (kpa500_data[3] === "1") {
+            state = "0";
+        } else {
+            state = "1";
+        }
+        post_request("/api/set_speaker_alarm", "state=" + state);
+    }
+
+    function clear_fault_button_click() {
+        post_request("/api/clear_fault", "");
+    }
+
     function process_get_status_response(message) {
         let status_data = JSON.parse(message);
-        let kpa500_data = status_data.kpa500_data;
+        kpa500_data = status_data["kpa500_data"];
         let power_button = document.getElementById("power_button");
         let operate_button = document.getElementById("operate_button");
         let operate_radio_button = document.getElementById("operate_radio_button");
         let operate_radio_button_label = document.getElementById("operate_radio_button_label")
         let standby_radio_button = document.getElementById("standby_radio_button");
         let standby_radio_button_label = document.getElementById("standby_radio_button_label");
-        let band_menu = document.getElementById("select_band");
+        let select_band = document.getElementById("select_band");
         let power_value = document.getElementById("power_value");
         let power_meter = document.getElementById("power_meter")
         let swr_value = document.getElementById("swr_value");
@@ -161,19 +195,26 @@
         let temp_meter = document.getElementById("temp_meter");
         let fan_range = document.getElementById("fan_range");
         let fan_range_label = document.getElementById("fan_range_label");
+        let speaker_button = document.getElementById("speaker_button");
         let fault_text = document.getElementById("fault_text");
 
+        // power button
+        if (kpa500_data[4] === "1") {
+            power_button.style.color = "#080";
+        } else {
+            power_button.style.color = "#800";
+        }
         // operate_button & related radio buttons
         if (kpa500_data[0] === "1") {
-            operate_button.style.color = "green";
+            operate_button.style.color = "#080";
             operate_button.value = "Standby";
             operate_radio_button.checked = true;
-            operate_radio_button_label.style.color = "green";
+            operate_radio_button_label.style.color = "#080";
             operate_radio_button_label.style.fontWeight = "bold"
             standby_radio_button_label.style.color = "black";
             standby_radio_button_label.style.fontWeight = "normal";
         } else {
-            operate_button.style.color = "red";
+            operate_button.style.color = "#800";
             operate_button.value = "Operate";
             standby_radio_button.checked = true;
             operate_radio_button_label.style.color = "black";
@@ -191,6 +232,7 @@
         let swr = parseInt(kpa500_data[11]);
         if (power === 0) {
             swr_value.innerHTML = "NO RF";
+            swr_meter.value = 0.0;
         } else {
             swr_value.innerHTML = swr.toString();
             swr_meter.value = swr;
@@ -219,6 +261,14 @@
             fan_range_label.innerHTML = "Fan Speed: " + fan_speed.toString();
         }
         fan_range.value = kpa500_data[17];
+        // speaker button
+        if (kpa500_data[3] === "1") {
+            speaker_button.style.color = "#080";
+            speaker_button.style.fontWeight = "bold";
+        } else {
+            speaker_button.style.color = "#833"
+            speaker_button.style.fontWeight = "normal";
+        }
         // fault text
         if (kpa500_data[6] === "AMP ON") {
             fault_text.style.background = '#9e9';
@@ -227,24 +277,27 @@
         }
         fault_text.innerHTML = kpa500_data[6];
 
-        // set the radio buttons to track automatic updating when rotator is moving...
-        document.getElementById('refresh_radio_0').checked = (update_secs === 0);
-        document.getElementById('refresh_radio_1').checked = (update_secs === 1);
-        document.getElementById('refresh_radio_5').checked = (update_secs === 5);
-
         if (update_timeout !== 0) {
             clearTimeout(update_timeout)
             update_timeout = 0;
         }
 
+        let button_secs = update_secs;
         if (free_updates > 0) {
             update_timeout = setTimeout(get_status, 1000);
+            button_secs = 1;
             free_updates--;
         } else {
             if (update_secs > 0) {
                 update_timeout = setTimeout(get_status, update_secs * 1000);
             }
         }
+
+        // set the radio buttons for automatic updating
+        document.getElementById('refresh_radio_0').checked = (button_secs === 0);
+        document.getElementById('refresh_radio_1').checked = (button_secs === 1);
+        document.getElementById('refresh_radio_5').checked = (button_secs === 5);
+
     }
 
     function get_status() {
@@ -273,23 +326,24 @@
             get_status();
         }
     }
+
 </script>
 <body onload="page_load()">
 <div class="header">KPA500 Console</div>
 <div class="three_columns">
     <div>
-        <input type="button" id="power_button" value="Power">
-        <input type="button" id="operate_button" value="Operate">
+        <input type="button" id="power_button" value="Power" onclick="toggle_power()">
+        <input type="button" id="operate_button" value="Operate" onclick="toggle_operate()">
     </div>
     <div style="text-align: center;">
         <label for="operate_radio_button" id="operate_radio_button_label">Operate</label>
-        <input type="radio" name="operate_standby" id="operate_radio_button" value="Operate">
+        <input type="radio" name="operate_standby" id="operate_radio_button" value="Operate" onclick="radio_operate(1)">
         <label for="standby_radio_button" id="standby_radio_button_label">Standby</label>
-        <input type="radio" name="operate_standby" id="standby_radio_button" value="Standby">
+        <input type="radio" name="operate_standby" id="standby_radio_button" value="Standby" onclick="radio_operate(0)">
     </div>
     <div style="text-align:right;">
         <label for="select_band">Band:</label>
-        <select id="select_band">
+        <select id="select_band" onchange="select_band_changed()">
         <option value="160m">160m</option>
         <option value="80m">80m</option>
         <option value="60m">60m</option>
@@ -308,31 +362,31 @@
     <div class="dt_label">Power:</div>
     <div class="dt_value" id="power_value"></div>
     <div class="dt_bg">
-        <meter id="power_meter" class="dt_meter" min="0" max="700" low="500" high="600" optimum="400"></meter>
+        <meter id="power_meter" class="dt_meter" min="0" max="700" low="500" high="600" optimum="400" value="0"></meter>
     </div>
 
     <div class="dt_label">SWR:</div>
     <div class="dt_value" id="swr_value"></div>
     <div class="dt_bg">
-        <meter id="swr_meter" class="dt_meter" min="1" max="5" low="1.5" high="2" optimum="1.1"></meter>
+        <meter id="swr_meter" class="dt_meter" min="1" max="5" low="1.5" high="2" optimum="1.1" value="0"></meter>
     </div>
 
     <div class="dt_label">Current:</div>
     <div class="dt_value" id="current_value"></div>
     <div class="dt_bg">
-        <meter id="current_meter" class="dt_meter" min="0" max="15" low="8" high="10" optimum="5"></meter>
+        <meter id="current_meter" class="dt_meter" min="0" max="15" low="8" high="10" optimum="5" value="0"></meter>
     </div>
 
     <div class="dt_label">Voltage:</div>
     <div class="dt_value" id="voltage_value"></div>
     <div class="dt_bg">
-        <meter id="voltage_meter" class="dt_meter" min="0" max="100" low="68" high="80" optimum="72"></meter>
+        <meter id="voltage_meter" class="dt_meter" min="0" max="100" low="68" high="80" optimum="72" value="0"></meter>
     </div>
 
     <div class="dt_label">Temp:</div>
     <div class="dt_value" id="temp_value"></div>
     <div class="dt_bg">
-        <meter id="temp_meter" class="dt_meter" min="0" max="100" low="40" high="60" optimum="25"></meter>
+        <meter id="temp_meter" class="dt_meter" min="0" max="100" low="40" high="60" optimum="25" value="0"></meter>
     </div>
 </div>
 <div class="two_columns">
@@ -340,8 +394,8 @@
         <label for="fan_range" id="fan_range_label">Fan Speed</label>
     </div>
     <div>
-        <input type="range" id="fan_range" min="0" max="6" value="0" list="tickmarks">
-        <datalist id="tickmarks">
+        <input type="range" id="fan_range" min="0" max="6" value="0" list="tick_marks" onchange="fan_speed_change()">
+        <datalist id="tick_marks">
             <option value="0" label="auto"></option>
             <option value="1" label="1"></option>
             <option value="2" label="2"></option>
@@ -354,11 +408,11 @@
 </div>
 <div class="three_columns">
     <div style="text-align: left;">
-        <input type="button" id="speaker_button" value="Speaker Alarm">
+        <input type="button" id="speaker_button" value="Speaker Alarm" onclick="speaker_alarm_button_click()">
     </div>
     <div class="fault_text" id="fault_text"></div>
     <div style="text-align: right;">
-        <input type="button" id="clear_fault_button" value="Clear Fault">
+        <input type="button" id="clear_fault_button" value="Clear Fault" onclick="clear_fault_button_click()">
     </div>
 </div>
 <div class="row">
@@ -374,8 +428,7 @@
     </div>
 <div class="row">
         <div class="setup"><a href="setup.html">Setup</a></div>
-        <div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20221226</div>
-</div>
+        <div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20221227</div>
 </div>
 </body>
 </html>
