--- a/src/kpa500-remote/content/setup.html
+++ b/src/kpa500-remote/content/setup.html
@@ -3,7 +3,7 @@
 <!-- Copyright 2022, J. B. Otterson N1KDO. -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.5, maximum-scale=2.0">
-    <title>Device Setup</title>
+    <title>Setup</title>
 </head>
 <style>
     .author {
@@ -11,8 +11,9 @@
         font-weight: bold;
         text-align: right;
         position: absolute;
+        left: 410px;
         top: 340px;
-        right: 7em;
+        width: 90px;
     }
 
     .author a:link, .author a:visited, .author a:hover {
@@ -29,19 +30,14 @@
         width: 500px;
     }
 
-    .centered {
+    .button_bar {
+        padding-top: 10px;
         text-align: center;
     }
 
     .config_form {
-        padding: 20px 49px;
-        width: 400px;
-    }
-
-    .config_inner {
-        border-style: double;
-        border-radius: 4px;
-        padding: 10px;
+        padding: 5px 75px;
+        width: 350px;
     }
 
     .files_link {
@@ -51,7 +47,7 @@
         text-align: left;
         position: absolute;
         top: 340px;
-        width: 2px;
+        width: 50px;
     }
 
     .files_link a:link, .files_link a:visited, .files_link a:hover {
@@ -61,24 +57,22 @@
 
     form {
         display: table;
-        padding: 20px 50px;
     }
 
     form p {
         display: table-row;
-        line-height: 2em;
     }
 
     .header {
         text-align: center;
         font-size: 24pt;
         font-weight: bold;
-        margin-top: 4px;
     }
 
     input {
         display: table-cell;
         font-family: inherit;
+        font-size: .75em;
     }
 
     input[type=number] {
@@ -101,6 +95,8 @@
 
     label {
         display: table-cell;
+        font-size: 10pt;
+        padding: 4px 4px 4px 0;
         text-align: right;
         width: 40%;
     }
@@ -136,13 +132,37 @@
         document.getElementById("secret_input").value = secret;
         document.getElementById("tcp_port_input").value = config.tcp_port;
         document.getElementById("web_port_input").value = config.web_port;
+        document.getElementById("username_input").value = config.username;
+        document.getElementById("password_input").value = config.password;
+        let dhcp = config.dhcp
+        document.getElementById("dhcp_input").checked = config.dhcp;
+        let ip_address_element = document.getElementById("ip_address_input");
+        ip_address_element.value = config.ip_address;
+        ip_address_element.disabled = dhcp;
+        let netmask_element = document.getElementById("netmask_input")
+        netmask_element.value = config.netmask;
+        netmask_element.disabled = dhcp;
+        let gateway_element = document.getElementById("gateway_input");
+        gateway_element.value = config.gateway;
+        gateway_element.disabled = dhcp;
+        let dns_element = document.getElementById("dns_server_input");
+        dns_element.value = config.dns_server;
+        dns_element.disabled = dhcp;
     }
 
     function set_config() {
-        let ssid = document.getElementById("ssid_input").value
-        let secret = document.getElementById("secret_input").value
-        let tcp_port = document.getElementById("tcp_port_input").value
-        let web_port = document.getElementById("web_port_input").value
+        let ssid = document.getElementById("ssid_input").value;
+        let secret = document.getElementById("secret_input").value;
+        let tcp_port = document.getElementById("tcp_port_input").value;
+        let web_port = document.getElementById("web_port_input").value;
+        let username = document.getElementById("username_input").value;
+        let password = document.getElementById("username_input").value;
+        let dhcp = document.getElementById("dhcp_input").checked;
+        let dhcp_val = dhcp ? 1 : 0;
+        let ip_address = document.getElementById("ip_address_input").value;
+        let netmask = document.getElementById("netmask_input").value;
+        let gateway = document.getElementById("gateway_input").value;
+        let dns_server = document.getElementById("dns_server_input").value;
         if (ssid.length < 1 || ssid.length > 64) {
             alert("Invalid SSID!");
             return;
@@ -161,13 +181,47 @@
             alert("Invalid Web Port");
             return;
         }
+        if (username.length < 1 || username.length > 16) {
+            alert("Invalid username");
+            return;
+        }
+        if (password.length < 1 || password.length > 16) {
+            alert("Invalid password");
+            return;
+        }
+        // validate static IP config
+        if (!dhcp) {
+            let ip_addr_regex =/\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}/;
+            if (!ip_address.match(ip_addr_regex)) {
+                alert("Invalid IP address");
+                return;
+            }
+            if (!netmask.match(ip_addr_regex)) {
+                alert("Invalid Network Mask");
+                return;
+            }
+            if (!gateway.match(ip_addr_regex)) {
+                alert("Invalid Gateway Address");
+                return;
+            }
+            if (!dns_server.match(ip_addr_regex)) {
+                alert("Invalid DNS Server Address");
+                return;
+            }
+        }
         let config = {};
         config.SSID = ssid;
         config.secret = secret;
         config.tcp_port = tcp_port;
         config.web_port = web_port;
+        config.username = username;
+        config.password = password;
+        config.dhcp = dhcp_val;
+        config.ip_address = ip_address;
+        config.netmask = netmask;
+        config.gateway = gateway;
+        config.dns_server = dns_server;
         let payload = JSON.stringify(config);
-
         let xmlHttp = new XMLHttpRequest();
         if (xmlHttp == null) {
             alert("get a better browser!");
@@ -211,11 +265,18 @@
         window.location.href = "/";
     }
 
+    function dhcp_change() {
+        let dhcp = document.getElementById("dhcp_input").checked;
+        document.getElementById("ip_address_input").disabled = dhcp;
+        document.getElementById("netmask_input").disabled = dhcp;
+        document.getElementById("gateway_input").disabled = dhcp;
+        document.getElementById("dns_server_input").disabled = dhcp;
+    }
+
 </script>
 <body onload="page_load()">
-<div class="header">Device Setup</div>
+<div class="header">Setup</div>
 <div class="config_form">
-    <div class="config_inner">
         <form>
             <p>
                 <label for="ssid_input">SSID:</label>
@@ -233,21 +294,47 @@
                 <label for="web_port_input">Web Port:</label>
                 <input type="number" id="web_port_input" min="0" max="65535"/>
             </p>
-        </form>
-        <div class="centered">
             <p>
-                <input type="button" id="cancel_button" value="Cancel" title="Cancel"
-                       onclick="cancel_page()"/>
-                <input type="button" id="reset_button" value="Reset" title="Reload Device Configuration"
-                       onclick="get_config()"/>
-                <input type="button" id="rstart_button" value="Restart" title="Restart Device to use new setup"
-                       onclick="restart()"/>
-                <input type="button" id="apply_button" value="Apply" title="Save Configuration" onclick="set_config()"/>
+                <label for="username_input">Remote Username:</label>
+                <input type="text" id="username_input" maxlength="16"/>
             </p>
+            <p>
+                <label for="password_input">Remote Password:</label>
+                <input type="password" id="password_input" maxlength="16"/>
+            </p>
+            <p>
+                <label for="dhcp_input">Use DHCP:</label>
+                <input type="checkbox" id="dhcp_input" onchange="dhcp_change()"/>
+            </p>
+            <p>
+                <label for="ip_address_input">IP Address:</label>
+                <input type="text" id="ip_address_input" maxlength="16" pattern="^(?!0)(?!.*\.$)((1?\d?\d|25[0-5]|2[0-4]\d)(\.|$)){4}$"/>
+            </p>
+            <p>
+                <label for="netmask_input">Network Mask:</label>
+                <input type="text" id="netmask_input" maxlength="16" pattern="^(?!0)(?!.*\.$)((1?\d?\d|25[0-5]|2[0-4]\d)(\.|$)){4}$"/>
+            </p>
+            <p>
+                <label for="gateway_input">Gateway Address:</label>
+                <input type="text" id="gateway_input" maxlength="16" pattern="^(?!0)(?!.*\.$)((1?\d?\d|25[0-5]|2[0-4]\d)(\.|$)){4}$"/>
+            </p>
+            <p>
+                <label for="dns_server_input">DNS Server:</label>
+                <input type="text" id="dns_server_input" maxlength="16" pattern="^(?!0)(?!.*\.$)((1?\d?\d|25[0-5]|2[0-4]\d)(\.|$)){4}$"/>
+            </p>
+        </form>
+        <div class="button_bar">
+            <input type="button" id="cancel_button" value="Cancel" title="Back to Rotator Control"
+                   onclick="cancel_page()"/>
+            <input type="button" id="reset_button" value="Reset" title="Reload Configuration"
+                   onclick="get_config()"/>
+            <input type="button" id="rstart_button" value="Restart" title="Restart Controller to use new setup"
+                   onclick="restart()"/>
+            <input type="button" id="apply_button" value="Apply" title="Save Configuration"
+                   onclick="set_config()"/>
         </div>
-    </div>
 </div>
 <div class="files_link"><a href="files.html">Files</a></div>
-<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20221226</div>
+<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20221224</div>
 </body>
 </html>
