minor cleanups, take out ntp.

--- a/src/kpa500-remote/content/kpa500.html
+++ b/src/kpa500-remote/content/kpa500.html
@@ -3,6 +3,8 @@
 <!-- Copyright 2022, J. B. Otterson N1KDO. -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.5, maximum-scale=2.0">
+    <!--<link rel="shortcut icon" href="favicon.png" type="image/png">-->
+
     <title>KPA500 Console</title>
 </head>
 <style>
