--- a/src/kpa500-remote/content/setup.html
+++ b/src/kpa500-remote/content/setup.html
@@ -31,12 +31,12 @@
     }
 
     .button_bar {
-        padding-top: 10px;
+        padding-top: 4px;
         text-align: center;
     }
 
     .config_form {
-        padding: 5px 75px;
+        padding: 4px 75px;
         width: 350px;
     }
 
@@ -93,10 +93,15 @@
         width: 5em;
     }
 
+    input[type=checkbox] {
+        margin: 0;
+        vertical-align: middle;
+    }
+
     label {
         display: table-cell;
         font-size: 10pt;
-        padding: 4px 4px 4px 0;
+        padding: 4px 4px 0 0;
         text-align: right;
         width: 40%;
     }
@@ -136,6 +141,7 @@
         document.getElementById("password_input").value = config.password;
         let dhcp = config.dhcp
         document.getElementById("dhcp_input").checked = config.dhcp;
+        document.getElementById("hostname_input").value = config.hostname;
         let ip_address_element = document.getElementById("ip_address_input");
         ip_address_element.value = config.ip_address;
         ip_address_element.disabled = dhcp;
@@ -159,6 +165,7 @@
         let password = document.getElementById("username_input").value;
         let dhcp = document.getElementById("dhcp_input").checked;
         let dhcp_val = dhcp ? 1 : 0;
+        let hostname = document.getElementById("hostname_input").value;
         let ip_address = document.getElementById("ip_address_input").value;
         let netmask = document.getElementById("netmask_input").value;
         let gateway = document.getElementById("gateway_input").value;
@@ -189,6 +196,9 @@
             alert("Invalid password");
             return;
         }
+        if ((hostname.length < 1) || (hostname.length > 16) || (/\s/.test(hostname))) {
+            alert("Invalid hostname")
+        }
         // validate static IP config
         if (!dhcp) {
             let ip_addr_regex =/\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}/;
@@ -217,6 +227,7 @@
         config.username = username;
         config.password = password;
         config.dhcp = dhcp_val;
+        config.hostname = hostname;
         config.ip_address = ip_address;
         config.netmask = netmask;
         config.gateway = gateway;
@@ -307,6 +318,10 @@
                 <input type="checkbox" id="dhcp_input" onchange="dhcp_change()"/>
             </p>
             <p>
+                <label for="hostname_input">Hostname:</label>
+                <input type="text" id="hostname_input" maxlength="64">
+            </p>
+            <p>
                 <label for="ip_address_input">IP Address:</label>
                 <input type="text" id="ip_address_input" maxlength="16" pattern="^(?!0)(?!.*\.$)((1?\d?\d|25[0-5]|2[0-4]\d)(\.|$)){4}$"/>
             </p>
@@ -335,6 +350,6 @@
         </div>
 </div>
 <div class="files_link"><a href="files.html">Files</a></div>
-<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20221224</div>
+<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20230603</div>
 </body>
 </html>
