unset AP mode when saving configuration from UI.

--- a/src/kpa500-remote/content/files.html
+++ b/src/kpa500-remote/content/files.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html" lang="en">
-<!-- Copyright 2022, J. B. Otterson N1KDO. -->
+<!-- Copyright 2022, 2024 J. B. Otterson N1KDO. -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.5, maximum-scale=2.0">
     <title>Manage Files</title>
@@ -274,6 +274,6 @@
     <a href="kat500.html">KAT500</a>
     <a href="setup.html">Setup</a>
 </div>
-<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20230813</div>
+<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20240127</div>
 </body>
 </html>
