--- a/src/kpa500-remote/content/files.html
+++ b/src/kpa500-remote/content/files.html
@@ -39,7 +39,7 @@
         width: 200px;
     }
 
-    .bottom_links a:link, .bottom_link a:visited, .bottom_link a:hover {
+    .bottom_links a:link, .bottom_links a:visited, .bottom_links a:hover {
         color: blue;
         text-decoration: none;
         padding-right: 4px;
