update status fetch to fail more gently

--- a/src/kpa500-remote/content/kat500.html
+++ b/src/kpa500-remote/content/kat500.html
@@ -263,7 +263,7 @@
             try {
                 status_data = JSON.parse(message);
             } catch (e) {
-                alert("KAT500 page: Invalid status data received.");
+                console.error("KAT500 page: Invalid status data received.");
                 return;
             }
             kat500_data = status_data["kat500_data"];
@@ -428,7 +428,7 @@
                 if (xmlHttp.status === 200) {
                     process_get_status_response(xmlHttp.responseText);
                 } else {
-                    alert("KAT500 page failed to load status data.");
+                    console.error("KAT500 page failed to load status data.");
                 }
             }
             xmlHttp.onerror = function () {
