style changes, add active link

--- a/src/kpa500-remote/content/files.html
+++ b/src/kpa500-remote/content/files.html
@@ -110,6 +110,12 @@
             text-align: right;
             width: 40%;
         }
+
+        .selected {
+            color: red;
+            padding-right: 4px;
+        }
+
     </style>
     <script>
 
@@ -285,7 +291,8 @@
     <a href="kpa500.html">KPA500</a>
     <a href="kat500.html">KAT500</a>
     <a href="setup.html">Setup</a>
+    <span class="selected">Files</span>
 </div>
-<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251222</div>
+<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251228</div>
 </body>
 </html>
