--- a/src/kpa500-remote/content/kpa500.html
+++ b/src/kpa500-remote/content/kpa500.html
@@ -36,7 +36,6 @@
             text-align: left;
             position: absolute;
             top: 340px;
-            width: 120px;
         }
 
         .bottom_links a:link, .bottom_links a:visited, .bottom_links a:hover {
@@ -88,9 +87,10 @@
         }
 
         div.refresh_radio {
-            border: 1px solid black;
-            margin: 10px 150px 0 150px;
-            text-align: left;
+            margin-top: 1em;
+            display: flex;
+            justify-content: space-evenly;
+            flex-direction: row;
         }
 
         .refresh_radio_label {
@@ -100,6 +100,11 @@
 
         #operate_radio_button, #standby_radio_button {
             margin: 3px 10px 0 0;
+        }
+
+        .selected {
+            color: red;
+            padding-right: 4px;
         }
 
         .three_columns {
@@ -465,23 +470,23 @@
         <input type="button" id="clear_fault_button" value="Clear Fault" onclick="clear_fault_button_click()">
     </div>
 </div>
-<div class="row">
-    <div class="refresh_radio">
-        <div class="refresh_radio_label">Auto-Refresh</div>
+<div class="refresh_radio">
+    <fieldset>
+        <legend>Auto-Refresh</legend>
         <input type="radio" name="refresh_radio" id="refresh_radio_0" value="0" onclick="set_refresh(0)"/>
-        <label for="refresh_radio_0">Never</label><br>
+        <label for="refresh_radio_0">Never&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <input type="radio" name="refresh_radio" id="refresh_radio_1" value="1" onclick="set_refresh(1)"/>
-        <label for="refresh_radio_1">1 second</label><br>
+        <label for="refresh_radio_1">1 second&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <input type="radio" name="refresh_radio" id="refresh_radio_5" value="5" onclick="set_refresh(5)"/>
-        <label for="refresh_radio_5">5 seconds</label><br>
-    </div>
+        <label for="refresh_radio_5">5 seconds</label>
+    </fieldset>
 </div>
-<div class="row">
     <div class="bottom_links">
         <a href="kat500.html">KAT500</a>
+        <span class="selected">KPA500</span>
         <a href="setup.html">Setup</a>
+        <a href="files.html">Files</a>
     </div>
-    <div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251227</div>
-</div>
+    <div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251228</div>
 </body>
 </html>
