--- a/src/kpa500-remote/content/setup.html
+++ b/src/kpa500-remote/content/setup.html
@@ -30,7 +30,7 @@
         }
 
         .button_bar {
-            padding-top: 4px;
+            padding-top: 2px;
             text-align: center;
         }
 
@@ -65,7 +65,7 @@
 
         .header {
             text-align: center;
-            font-size: 18pt;
+            font-size: 16pt;
             font-weight: bold;
         }
 
@@ -105,6 +105,12 @@
             text-align: right;
             width: 40%;
         }
+
+        .selected {
+            color: red;
+            padding-right: 4px;
+        }
+
     </style>
     <script>
 
@@ -380,8 +386,9 @@
 <div class="bottom_links">
     <a href="kpa500.html">KPA500</a>
     <a href="kat500.html">KAT500</a>
+    <span class="selected">Setup</span>
     <a href="files.html">Files</a>
 </div>
-<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251222</div>
+<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251228</div>
 </body>
 </html>
